src/assets/Components/Component.css
.header {
    top: 0;
    left: 0;
    padding: 10px 30px;
    display: flex;
    align-items: center;
    z-index: 100;
    background: #3A6D8C;
  }
  .logo img {
    border-radius: 5px 20px 5px;
    width: 70px;
  }
  .title {
    margin: 0 auto;
  }

  .sidebar {
    min-height: 100vh;
    width: 10vw;
    position: fixed;
    overflow-x: hidden;
    background-color: #001F3F;
    padding-top: 20px;
    display: flex; 
    flex-direction: column;

  }
  
  .sidebar .nav-link {
    color: #ffffff;
  }
  
  .sidebar .nav-link:hover {
    background-color: #6A9AB0;
    
  }
  
  .sidebar.collapsed {
    width: 70px;
  }
  
  .sidebar .toggle-button {
    margin: 5px;
  }
  
  .navbar {
    transition: opacity 0.5s;
  }
  
  .sidebar.collapsed .navbar {
    opacity: 0;
  }
  
  .sidebar.collapsed .toggle-button {
    display: block;
  }
  
  .sidebar .nav-link {
    text-align: center;
    margin: 5px;
    padding: 15px;
  }
  
  .sidebar .nav-link img{
    width: 100px;
    border-radius: 50%;
  }


  .sidebar Button{
    background-color: transparent;
    margin: 5px;
    font-size: 20px;
    border: 1px solid rgb(241, 241, 241);
  }

  .sidebar Button:hover{
    background-color: #6A9AB0;
  }

  .sidebar .logoutButton{
    background-color: transparent;
    border-color: transparent;
    margin-top: 35vh;
    font-size: 30px;

  }
  .sidebar .logoutButton:hover{
    background-color: red;
  }

